tdf#152134 Customize: assign user macro to menu hangs

regression from
    commit d4257daba1155ebccbfebea99bad0e4152ca9b08
    Author: Noel Grandin <noelgrandin@gmail.com>
    Date:   Fri Dec 24 20:58:28 2021 +0200
    use comphelper::WeakComponentImplHelper in MenuBarManager

We should not hold the mutex while firing events, since the mutex is now
non-recursive.

Change-Id: I6ee45df0bf27df3ca1fd31857285ceb820161d61
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/143671
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>